[package]
name = "dht22"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal-async = { version = "1.0.0", optional = true }
log = { version = "0.4.20", optional = true }
defmt = { version = "0.3.6", optional = true }

[features]
default = ["async", "impl-debug"]
async = ["dep:embedded-hal-async"]
log = ["dep:log"]
defmt = ["dep:defmt"]
impl-debug = []
impl-defmt-format = ["dep:defmt"]
