[package]
name = "gxhtc3-driver-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["async", "impl-debug"]
async = ["dep:embedded-hal-async"]
blocking = ["dep:embedded-hal"]
log = ["dep:log"]
defmt = ["dep:defmt"]
impl-debug = []
impl-defmt-format = ["dep:defmt"]
fuzz = ["blocking", "impl-debug"]

[dependencies]
duplicate = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
log = { version = "0.4.20", optional = true }
defmt = { version = "0.3.6", optional = true }
crc-any = { version = "*", default-features = false }
