[package]
name = "gxhtc3"
version = "0.1.0"
edition = "2021"

[features]
default = ["impl-debug"]
log = ["dep:log"]
defmt = ["dep:defmt"]
impl-debug = []
impl-defmt-format = ["dep:defmt"]

[dependencies]
embedded-hal-async = { version = "1.0.0" }
log = { version = "0.4.20", optional = true }
defmt = { version = "0.3.6", optional = true }
crc-any = { version = "*", default-features = false }
