[package]
name = "tm1637"
version = "0.1.0"
authors = ["tushantong <645187582@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }

esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [
    "esp32c3",
    "async",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }

tm1637-embedded-hal = { version = "*", default-features = false, features = [
    "async",
    "demo",
] }

embedded-utils-rs = { path = "../../embedded-utils-rs", version = "0.1", features = [
    "time",
] }
embedded-hal-async = { version = "1.0.0" }
embedded-hal = { version = "1.0.0" }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
